<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mo.cupid.ui.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="text"
                android:text="@={viewModel.email}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@={viewModel.userName}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

            <Button
                style="@style/Button"
                android:layout_marginBottom="10dp"
                android:enabled="@{viewModel.areInputsCorrect}"
                android:onClick="@{()->viewModel.registerUser()}"
                android:text="@string/signup" />

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:text="@string/loginhere"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</layout>