<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp">

        <Button
            android:id="@+id/takePhotoButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/takephoto"
            app:layout_constraintBottom_toTopOf="@id/editButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/editphoto"
            app:layout_constraintBottom_toTopOf="@id/sendButton"
            app:layout_constraintTop_toBottomOf="@id/takePhotoButton" />

        <Button
            android:id="@+id/sendButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/sendphoto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>