<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LogInFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mo.cupid.ui.login.LogInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@={viewModel.userName}" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

            <Button
                style="@style/Button"
                android:onClick="@{()->viewModel.logIn()}"
                android:text="@string/login"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:text="@string/signuphere" />

        </LinearLayout>

    </ScrollView>

</layout>